# ModernCMakeTemplate

./: CMakeLists.txt  README.md  libInstallConfig.cmake.in
LibA/: CMakeLists.txt
LibA/include/LibA/: libA.h
LibA/test/: CMakeLists.txt
LibA/test/src/: testLibA.cpp
LibB/: CMakeLists.txt
LibB/cmake/: GoogleTestCMakeLists.txt.in
LibB/include/LibB/: libB.h
LibB/src/LibB/: libB.cpp
LibB/test/: CMakeLists.txt
LibB/test/src/: testLibB.cpp
externalClientProject/: CMakeLists.txt
externalClientProject/src/: main.cpp
include/: myLib.h
src/: main.cpp
tiClient/: CMakeLists.txt
tiClient/src/: main.cpp
